--- a/Al_Dente/src/sample/index.fxml
+++ b/Al_Dente/src/sample/index.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="800" prefWidth="700" xmlns="http://javafx.com/javafx/8.0.101" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.innopolis.al_dente.Controller">
+<VBox prefHeight="800" prefWidth="700" xmlns="http://javafx.com/javafx/8.0.101" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.innopolis.al_dente.controllers.MainController">
 
     <AnchorPane>
         <MenuBar prefHeight="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
